# gnomepy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-backtest-image.yml
deploy/backtest/: Dockerfile  ecs-task-definition.json
deploy/train/: Dockerfile  ecs-task-definition.json
docker/backtest/: Dockerfile  README.md  build.sh  entrypoint.sh  example-backtest.yaml  run.sh
docker/backtest/examples/: momentum_fee_threshold_sweep.yaml  momentum_latency_sweep.yaml  momentum_queue_model_sweep.yaml  momentum_signal_sweep.yaml
docs/: explorer.md
examples/: backtest_config.yaml  train_config.yaml
gnomepy/: __init__.py  _fs.py  auth.py  backtest_config.py  cli.py  config.py  entrypoint.py  metadata.py  remote.py  reporting.py  sweep.py  utils.py
gnomepy/backtest/: README_vectorized.md  action.py  advanced_optimization_example.py  backtest.py  coint_testing.py  cointegration_nb.ipynb  debug_comparison.py  debug_spread_comparison.py  driver.py  event.py  fee.py  hyperparameter_optimization_example.py  interface.ipynb  latency.py  oms.py  read_data.ipynb  read_data.py  recorder.py  signal.py  strategy.py  test.ipynb  test_vectorized.py  vectorized_example.py
gnomepy/backtest/archive/: coint_testing.py  cointegration_nb.ipynb  strategy_old.py
gnomepy/backtest/exchanges/: README.md  __init__.py  mbp.py  mbp_example.py
gnomepy/backtest/queues/: __init__.py  optimistic.py  probabilistic.py
gnomepy/backtest/stats/: metric.py  replay.py  stats.py  strategy.py  utils.py
gnomepy/cli/: config.py
gnomepy/data/: cached_client.py  client.py  types.py
gnomepy/explorer/: __init__.py  app.py  data.py  styles.py
gnomepy/importer/: __init__.py  chunker.py  encoder.py  import_job.py  mapping.py  scaling.py  uploader.py  validators.py
gnomepy/java/: __init__.py  _classpath.py  _jvm.py  cache.py  datastore.py  enums.py  market_data.py  oms.py  recorder.py  sbe.py  schemas.py  statics.py
gnomepy/registry/: __init__.py  api.py  graph.py  types.py
gnomepy/reporting/: __init__.py  metrics.py  plots.py  report.py
gnomepy/research/: __init__.py  cointegration_strat.py  oms.py  signal.py  test.ipynb  types.py
gnomepy/signals/: __init__.py  bps_signal.py  fill_rate_signal.py  kalman_volatility.py  registrable.py  registry.py  volatility_signal.py
gnomepy/strategies/: __init__.py  momentum_taker.py  simple_market_maker.py
notebooks/: backtest_example.ipynb  backtest_market_maker.ipynb  market_data.ipynb
tests/: test_cache.py  test_cli.py  test_config.py  test_importer.py  test_metadata.py  test_persistence.py  test_relationship_graph.py  test_s3_warnings_integration.py  test_strategy_loader.py  test_sweep.py  test_tardis.py  test_warning_handler.py
tests/backtest/: test_recorder_generic.py
tests/data/: test_types_encoding.py
(+122 files in other folders)
