[project]
name = "gnomepy"
version = "0.1.6"
description = ""
authors = [
    {name = "mprey",email = "masonprey7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "boto3 (>=1.36.18,<2.0.0)",
    "zstandard (>=0.23.0,<0.24.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.0,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "jpype1 (>=1.5.0,<2.0.0)",
    "notebook (>=7.5.5,<8.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

