[project]
name = "gnomepy"
version = "1.0.0"
description = ""
authors = [
    {name = "mprey",email = "masonprey7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "boto3 (>=1.36.18,<2.0.0)",
    "zstandard (>=0.23.0,<0.24.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "jpype1 (>=1.5.0,<2.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "pyyaml (>=6.0,<7.0)",
    "click (>=8.1,<9.0)",
]

[project.scripts]
gnomepy = "gnomepy.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

