[project]
name = "gnomepy"
version = "2.3.2"
description = ""
authors = [
    {name = "mprey",email = "masonprey7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "boto3 (>=1.36.18,<2.0.0)",
    "zstandard (>=0.23.0,<0.24.0)",
    "pytz (>=2025.1,<2026.0)",
    "pyyaml (>=6.0,<7.0)",
    "click (>=8.1,<9.0)",
]

[project.optional-dependencies]
backtest = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "jpype1 (>=1.5.0,<2.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "plotly (>=6.6.0,<6.7.0)",
    "dash (>=2.18,<3.0)",
    "dash-bootstrap-components (>=1.6,<2.0)",
    "pandas-stubs (>=2.3.3,<2.4.0)",
    "anthropic (>=0.40.0,<1.0.0)",
    "boto3-stubs (>=1.42.73,<1.43.0)",
]

[project.scripts]
gnomepy = "gnomepy.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry.group.tardis]
optional = true

[tool.poetry.group.tardis.dependencies]
tardis-dev = ">=1.0.0"

